--- a/manifest.json
+++ b/manifest.json
@@ -8,15 +8,15 @@
   "description": "Tu mercado local en El Salvador.",
   "icons": [
     {
-      "src": "icon-192.png",
+      "src": "icon-192.jpg",
       "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "any maskable"
+      "type": "image/jpeg",
+      "purpose": "any"
     },
     {
-      "src": "icon-512.png",
+      "src": "icon-512.jpg",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/jpeg"
     }
   ]
 }
