--- a/manifest.json
+++ b/manifest.json
@@ -1,4 +1,11 @@
 {
+  "name": "CheroMarket App",
+  "short_name": "CheroMarket",
+  "description": "Aplicación web progresiva para compras y gestión de productos",
+  "start_url": "/CheroMarket-App/",
+  "display": "standalone",
+  "background_color": "#ffffff",
+  "theme_color": "#0d6efd",
   "icons": [
     {
       "src": "icon-192.png",
