--- a/manifest.json
+++ b/manifest.json
@@ -30,5 +30,15 @@
     "src": "screenshots/menu.png",
     "sizes": "1080x1920",
     "type": "image/png"
+  },
+  {
+    "src": "screenshots/perfil.png",
+    "sizes": "1080x1920",
+    "type": "image/png"
+  },
+  {
+    "src": "screenshots/configuracion.png",
+    "sizes": "1080x1920",
+    "type": "image/png"
   }
 ]
